--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap');
 @import 'tailwindcss';
 
+@source "../.storybook";
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -40,6 +42,10 @@
 
 * {
   font-family: 'Wix Madefor Text', sans-serif;
+}
+
+*:focus {
+  outline: none;
 }
 
 .theme-blue {
