--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap');
 @import 'tailwindcss';
 
-@source "../.storybook";
-
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -77,4 +75,25 @@
 
 .sb-show-main {
   @apply p-0!;
+}
+
+.loader {
+  width: 36px;
+  height: 36px;
+  border: 4px solid;
+  @apply border-bg-500;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
