--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,20 @@
     transform: rotate(360deg);
   }
 }
+
+.w-color-editable-input {
+  @apply px-0!;
+}
+
+.w-color-editable-input input {
+  box-shadow: none !important;
+  font-size: 1rem !important;
+  color: rgb(244 244 245) !important;
+  font-weight: 500 !important;
+  letter-spacing: 0.1rem !important;
+  @apply rounded-lg! py-2! text-center focus:outline-hidden;
+}
+
+.w-color-editable-input span {
+  font-size: 0.9rem !important;
+}
