--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap');
 @import 'tailwindcss';
 
+@import 'react-datepicker/dist/react-datepicker.css';
+
 @custom-variant dark (&:is(.dark *));
 
 @theme {
@@ -138,4 +140,88 @@
 
 .icon-input-icon > span {
   @apply block size-4 rounded-full border border-dashed border-bg-300 dark:border-bg-700;
+}
+
+.react-datepicker__header {
+  @apply border-none bg-bg-50 dark:bg-bg-800;
+}
+
+.react-datepicker-time__header {
+  @apply py-2 font-medium text-bg-500;
+}
+
+.react-datepicker__month-container,
+.react-datepicker__time-container {
+  @apply bg-bg-50 dark:bg-bg-800;
+}
+
+.react-datepicker {
+  @apply overflow-hidden rounded-lg border-bg-200 bg-bg-50 shadow-custom dark:border-bg-700 dark:bg-bg-800;
+}
+
+.react-datepicker__day {
+  line-height: auto;
+  @apply inline-flex aspect-square! h-auto w-12 items-center justify-center text-center text-bg-500 hover:bg-bg-300 dark:hover:bg-bg-700/50;
+}
+
+.react-datepicker__day--today {
+  @apply rounded-md bg-custom-500/20 text-bg-900 shadow-custom dark:text-bg-200;
+}
+
+.react-datepicker__day-name {
+  @apply w-12 font-medium;
+}
+
+.theme-dark .react-datepicker__day--selected {
+  @apply bg-custom-500! text-bg-50!;
+}
+
+.theme-light .react-datepicker__day--selected {
+  @apply bg-custom-500! text-bg-900!;
+}
+
+.react-datepicker__current-month {
+  @apply py-4!;
+}
+
+.react-datepicker__day--keyboard-selected {
+  @apply bg-bg-200 dark:bg-bg-700/50;
+}
+
+.react-datepicker__day--outside-month {
+  @apply text-bg-300 dark:text-bg-700;
+}
+
+.react-datepicker__time-container {
+  @apply border-bg-200 dark:border-bg-700;
+}
+
+.react-datepicker__time {
+  background: transparent !important;
+}
+
+.react-datepicker__time-list-item {
+  @apply h-auto! py-3! text-sm text-bg-500 transition-all;
+}
+
+.react-datepicker__time-list-item:not(
+    .react-datepicker__time-list-item--selected
+  ) {
+  @apply hover:bg-bg-100! dark:hover:bg-bg-700/50!;
+}
+
+.theme-dark .react-datepicker__time-list-item--selected {
+  @apply bg-custom-500! text-bg-50!;
+}
+
+.theme-light .react-datepicker__time-list-item--selected {
+  @apply bg-custom-500! text-bg-900!;
+}
+
+.react-datepicker__time-list-item--selected:hover {
+  @apply bg-custom-600!;
+}
+
+aside .sidebar-item svg {
+  @apply text-custom-500!;
 }
