--- a/src/index.css
+++ b/src/index.css
@@ -222,6 +222,10 @@
   @apply bg-custom-600!;
 }
 
+.react-datepicker-wrapper {
+  @apply w-full!;
+}
+
 aside .sidebar-item svg {
   @apply text-custom-500!;
 }
