--- a/src/components/inputs/DateInput/index.module.css
+++ b/src/components/inputs/DateInput/index.module.css
@@ -1,3 +1,5 @@
+@import 'react-datepicker/dist/react-datepicker.css';
+
 .react-datepicker__header {
   @apply border-none bg-bg-50 dark:bg-bg-800;
 }
