--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Wix+Madefor+Text:ital,wght@0,400..800;1,400..800&display=swap');
 @import 'tailwindcss';
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Onest:wght@100..900&display=swap')
-layer(base);
-@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap')
-layer(base);
 
-@import 'tailwindcss';
-
-@import './components/inputs/DateInput/index.css';
-
-@source "../../node_modules/@lifeforge/ui/dist";
-
-@plugin 'daisyui';
-@plugin '@tailwindcss/typography';
+@import 'react-datepicker/dist/react-datepicker.css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -41,6 +30,27 @@ layer(base);
   --color-bg-800: rgb(var(--color-bg-800)) !important;
   --color-bg-900: rgb(var(--color-bg-900)) !important;
   --color-bg-950: rgb(var(--color-bg-950)) !important;
+
+  --animate-dialog-overlay-in: fadeIn;
+  --animate-dialog-overlay-out: fadeOut;
+
+  @keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+  @keyframes fadeOut {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+    }
+  }
 }
 
 @utility flex-center {
@@ -51,55 +61,43 @@ layer(base);
   @apply flex items-center justify-between;
 }
 
-@font-face {
-  font-family: 'LTAIdentityMedium';
-  src:
-    url('/fonts/LTAIdentity-Medium.woff2') format('woff2'),
-    url('/fonts/LTAIdentity-Medium.woff') format('woff');
-}
-
-:root {
-  interpolate-size: allow-keywords;
-  font-size: 14px;
-}
-
 * {
-  scrollbar-color: rgba(64, 64, 64, 0.5) rgba(38, 38, 38, 0.5);
-  scrollbar-width: thin;
-  overscroll-behavior: none;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none;
-  interpolate-size: allow-keywords;
-  @apply select-none;
-}
-
-*::selection {
-  @apply bg-custom-500;
-}
-
-input,
-textarea {
-  @apply border-hidden;
-}
-
-button {
-  @apply cursor-pointer;
-}
-
-code {
-  font-family: 'Jetbrains Mono', monospace;
+  font-family: 'Wix Madefor Text', sans-serif;
 }
 
 *:focus {
   outline: none;
 }
 
-*:disabled {
-  cursor: not-allowed;
+.theme-blue {
+  --color-custom-50: rgb(227 242 253);
+  --color-custom-100: rgb(187 222 251);
+  --color-custom-200: rgb(144 202 249);
+  --color-custom-300: rgb(100 181 246);
+  --color-custom-400: rgb(66 165 245);
+  --color-custom-500: rgb(33 150 243);
+  --color-custom-600: rgb(30 136 229);
+  --color-custom-700: rgb(25 118 210);
+  --color-custom-800: rgb(21 101 192);
+  --color-custom-900: rgb(13 71 161);
 }
 
-.stroke-\[2px\] > path {
-  stroke-width: 2.5px;
+.bg-zinc {
+  --color-bg-50: rgb(250 250 250);
+  --color-bg-100: rgb(244 244 245);
+  --color-bg-200: rgb(228 228 231);
+  --color-bg-300: rgb(212 212 216);
+  --color-bg-400: rgb(161 161 170);
+  --color-bg-500: rgb(113 113 122);
+  --color-bg-600: rgb(82 82 91);
+  --color-bg-700: rgb(63 63 70);
+  --color-bg-800: rgb(39 39 42);
+  --color-bg-900: rgb(24 24 27);
+  --color-bg-950: rgb(9 9 11);
+}
+
+.sb-show-main {
+  @apply p-0!;
 }
 
 .loader {
@@ -112,6 +110,15 @@ code {
   display: inline-block;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .w-color-editable-input {
@@ -131,498 +138,10 @@ code {
   font-size: 0.9rem !important;
 }
 
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+.icon-input-icon > span {
+  @apply block size-4 rounded-full border border-dashed border-bg-300 dark:border-bg-700;
 }
 
-[data-rmiz],
-[data-rmiz-content] {
-  @apply h-full w-full;
-}
-
-div[data-rmiz-modal-overlay] {
-  @apply bg-black/80;
-}
-
-progress::-webkit-progress-value {
-  @apply bg-custom-500!;
-}
-
-progress::-moz-progress-bar {
-  @apply bg-custom-500!;
-}
-
-.cm-editor * {
-  font-family: 'Jetbrains Mono', monospace !important;
-}
-
-.cm-editor {
-  @apply bg-bg-200/50!;
-}
-
-.dark .cm-editor {
-  @apply bg-bg-800!;
-}
-
-.cm-gutters {
-  @apply bg-bg-200!;
-}
-
-.dark .cm-gutters {
-  @apply bg-bg-800!;
-}
-
-.theme-red {
-  --color-custom-50: rgb(255 235 238);
-  --color-custom-100: rgb(255 205 210);
-  --color-custom-200: rgb(239 154 154);
-  --color-custom-300: rgb(229 115 115);
-  --color-custom-400: rgb(239 83 80);
-  --color-custom-500: rgb(244 67 54);
-  --color-custom-600: rgb(229 57 53);
-  --color-custom-700: rgb(211 47 47);
-  --color-custom-800: rgb(198 40 40);
-  --color-custom-900: rgb(183 28 28);
-}
-
-.theme-pink {
-  --color-custom-50: rgb(252 228 236);
-  --color-custom-100: rgb(248 187 208);
-  --color-custom-200: rgb(244 143 177);
-  --color-custom-300: rgb(240 98 146);
-  --color-custom-400: rgb(236 64 122);
-  --color-custom-500: rgb(233 30 99);
-  --color-custom-600: rgb(216 27 96);
-  --color-custom-700: rgb(194 24 91);
-  --color-custom-800: rgb(173 20 87);
-  --color-custom-900: rgb(136 14 79);
-}
-
-.theme-purple {
-  --color-custom-50: rgb(243 229 245);
-  --color-custom-100: rgb(225 190 231);
-  --color-custom-200: rgb(206 147 216);
-  --color-custom-300: rgb(186 104 200);
-  --color-custom-400: rgb(171 71 188);
-  --color-custom-500: rgb(156 39 176);
-  --color-custom-600: rgb(142 36 170);
-  --color-custom-700: rgb(123 31 162);
-  --color-custom-800: rgb(106 27 154);
-  --color-custom-900: rgb(74 20 140);
-}
-
-.theme-deep-purple {
-  --color-custom-50: rgb(237 231 246);
-  --color-custom-100: rgb(209 196 233);
-  --color-custom-200: rgb(179 157 219);
-  --color-custom-300: rgb(149 117 205);
-  --color-custom-400: rgb(126 87 194);
-  --color-custom-500: rgb(103 58 183);
-  --color-custom-600: rgb(94 53 177);
-  --color-custom-700: rgb(81 45 168);
-  --color-custom-800: rgb(69 39 160);
-  --color-custom-900: rgb(49 27 146);
-}
-
-.theme-indigo {
-  --color-custom-50: rgb(232 234 246);
-  --color-custom-100: rgb(197 202 233);
-  --color-custom-200: rgb(159 168 218);
-  --color-custom-300: rgb(121 134 203);
-  --color-custom-400: rgb(92 107 192);
-  --color-custom-500: rgb(63 81 181);
-  --color-custom-600: rgb(57 73 171);
-  --color-custom-700: rgb(48 63 159);
-  --color-custom-800: rgb(40 53 147);
-  --color-custom-900: rgb(26 35 126);
-}
-
-.theme-blue {
-  --color-custom-50: rgb(227 242 253);
-  --color-custom-100: rgb(187 222 251);
-  --color-custom-200: rgb(144 202 249);
-  --color-custom-300: rgb(100 181 246);
-  --color-custom-400: rgb(66 165 245);
-  --color-custom-500: rgb(33 150 243);
-  --color-custom-600: rgb(30 136 229);
-  --color-custom-700: rgb(25 118 210);
-  --color-custom-800: rgb(21 101 192);
-  --color-custom-900: rgb(13 71 161);
-}
-
-.theme-light-blue {
-  --color-custom-50: rgb(225 245 254);
-  --color-custom-100: rgb(179 229 252);
-  --color-custom-200: rgb(129 212 250);
-  --color-custom-300: rgb(79 195 247);
-  --color-custom-400: rgb(41 182 246);
-  --color-custom-500: rgb(3 169 244);
-  --color-custom-600: rgb(3 155 229);
-  --color-custom-700: rgb(2 136 209);
-  --color-custom-800: rgb(2 119 189);
-  --color-custom-900: rgb(1 87 155);
-}
-
-.theme-cyan {
-  --color-custom-50: rgb(224 247 250);
-  --color-custom-100: rgb(178 235 242);
-  --color-custom-200: rgb(128 222 234);
-  --color-custom-300: rgb(77 208 225);
-  --color-custom-400: rgb(38 198 218);
-  --color-custom-500: rgb(0 188 212);
-  --color-custom-600: rgb(0 172 193);
-  --color-custom-700: rgb(0 151 167);
-  --color-custom-800: rgb(0 131 143);
-  --color-custom-900: rgb(0 96 100);
-}
-
-.theme-teal {
-  --color-custom-50: rgb(224 242 241);
-  --color-custom-100: rgb(178 223 219);
-  --color-custom-200: rgb(128 203 196);
-  --color-custom-300: rgb(77 182 172);
-  --color-custom-400: rgb(38 166 154);
-  --color-custom-500: rgb(0 150 136);
-  --color-custom-600: rgb(0 137 123);
-  --color-custom-700: rgb(0 121 107);
-  --color-custom-800: rgb(0 105 92);
-  --color-custom-900: rgb(0 77 64);
-}
-
-.theme-green {
-  --color-custom-50: rgb(232 245 233);
-  --color-custom-100: rgb(200 230 201);
-  --color-custom-200: rgb(165 214 167);
-  --color-custom-300: rgb(129 199 132);
-  --color-custom-400: rgb(102 187 106);
-  --color-custom-500: rgb(76 175 80);
-  --color-custom-600: rgb(67 160 71);
-  --color-custom-700: rgb(56 142 60);
-  --color-custom-800: rgb(46 125 50);
-  --color-custom-900: rgb(27 94 32);
-}
-
-.theme-light-green {
-  --color-custom-50: rgb(241 248 233);
-  --color-custom-100: rgb(220 237 200);
-  --color-custom-200: rgb(197 225 165);
-  --color-custom-300: rgb(174 213 129);
-  --color-custom-400: rgb(156 204 101);
-  --color-custom-500: rgb(139 195 74);
-  --color-custom-600: rgb(124 179 66);
-  --color-custom-700: rgb(104 159 56);
-  --color-custom-800: rgb(85 139 47);
-  --color-custom-900: rgb(51 105 30);
-}
-
-.theme-lime {
-  --color-custom-50: rgb(249 251 231);
-  --color-custom-100: rgb(240 244 195);
-  --color-custom-200: rgb(230 238 156);
-  --color-custom-300: rgb(220 231 117);
-  --color-custom-400: rgb(212 225 87);
-  --color-custom-500: rgb(205 220 57);
-  --color-custom-600: rgb(192 202 51);
-  --color-custom-700: rgb(175 180 43);
-  --color-custom-800: rgb(158 157 36);
-  --color-custom-900: rgb(130 119 23);
-}
-
-.theme-yellow {
-  --color-custom-50: rgb(255 253 231);
-  --color-custom-100: rgb(255 249 196);
-  --color-custom-200: rgb(255 245 157);
-  --color-custom-300: rgb(255 241 118);
-  --color-custom-400: rgb(255 238 88);
-  --color-custom-500: rgb(255 235 59);
-  --color-custom-600: rgb(253 216 53);
-  --color-custom-700: rgb(251 192 45);
-  --color-custom-800: rgb(249 168 37);
-  --color-custom-900: rgb(245 127 23);
-}
-
-.theme-amber {
-  --color-custom-50: rgb(255 248 225);
-  --color-custom-100: rgb(255 236 179);
-  --color-custom-200: rgb(255 224 130);
-  --color-custom-300: rgb(255 213 79);
-  --color-custom-400: rgb(255 202 40);
-  --color-custom-500: rgb(255 193 7);
-  --color-custom-600: rgb(255 179 0);
-  --color-custom-700: rgb(255 160 0);
-  --color-custom-800: rgb(255 143 0);
-  --color-custom-900: rgb(255 111 0);
-}
-
-.theme-orange {
-  --color-custom-50: rgb(255 243 224);
-  --color-custom-100: rgb(255 224 178);
-  --color-custom-200: rgb(255 204 128);
-  --color-custom-300: rgb(255 183 77);
-  --color-custom-400: rgb(255 167 38);
-  --color-custom-500: rgb(255 152 0);
-  --color-custom-600: rgb(251 140 0);
-  --color-custom-700: rgb(245 124 0);
-  --color-custom-800: rgb(239 108 0);
-  --color-custom-900: rgb(230 81 0);
-}
-
-.theme-deep-orange {
-  --color-custom-50: rgb(251 233 231);
-  --color-custom-100: rgb(255 204 188);
-  --color-custom-200: rgb(255 171 145);
-  --color-custom-300: rgb(255 138 101);
-  --color-custom-400: rgb(255 112 67);
-  --color-custom-500: rgb(255 87 34);
-  --color-custom-600: rgb(244 81 30);
-  --color-custom-700: rgb(230 74 25);
-  --color-custom-800: rgb(216 67 21);
-  --color-custom-900: rgb(191 54 12);
-}
-
-.theme-brown {
-  --color-custom-50: rgb(239 235 233);
-  --color-custom-100: rgb(215 204 200);
-  --color-custom-200: rgb(188 170 164);
-  --color-custom-300: rgb(161 136 127);
-  --color-custom-400: rgb(141 110 99);
-  --color-custom-500: rgb(121 85 72);
-  --color-custom-600: rgb(109 76 65);
-  --color-custom-700: rgb(93 64 55);
-  --color-custom-800: rgb(78 52 46);
-  --color-custom-900: rgb(62 39 35);
-}
-
-.theme-grey {
-  --color-custom-50: rgb(250 250 250);
-  --color-custom-100: rgb(245 245 245);
-  --color-custom-200: rgb(238 238 238);
-  --color-custom-300: rgb(224 224 224);
-  --color-custom-400: rgb(189 189 189);
-  --color-custom-500: rgb(158 158 158);
-  --color-custom-600: rgb(117 117 117);
-  --color-custom-700: rgb(97 97 97);
-  --color-custom-800: rgb(66 66 66);
-  --color-custom-900: rgb(33 33 33);
-}
-
-.bg-slate {
-  --color-bg-50: rgb(248 250 252);
-  --color-bg-100: rgb(241 245 249);
-  --color-bg-200: rgb(226 232 240);
-  --color-bg-300: rgb(203 213 225);
-  --color-bg-400: rgb(148 163 184);
-  --color-bg-500: rgb(100 116 139);
-  --color-bg-600: rgb(71 85 105);
-  --color-bg-700: rgb(51 65 85);
-  --color-bg-800: rgb(30 41 59);
-  --color-bg-900: rgb(15 23 42);
-  --color-bg-950: rgb(2 6 23);
-}
-
-.bg-gray {
-  --color-bg-50: rgb(249 250 251);
-  --color-bg-100: rgb(243 244 246);
-  --color-bg-200: rgb(229 231 235);
-  --color-bg-300: rgb(209 213 219);
-  --color-bg-400: rgb(156 163 175);
-  --color-bg-500: rgb(107 114 128);
-  --color-bg-600: rgb(75 85 99);
-  --color-bg-700: rgb(55 65 81);
-  --color-bg-800: rgb(31 41 55);
-  --color-bg-900: rgb(17 24 39);
-  --color-bg-950: rgb(3 7 18);
-}
-
-.bg-zinc {
-  --color-bg-50: rgb(250 250 250);
-  --color-bg-100: rgb(244 244 245);
-  --color-bg-200: rgb(228 228 231);
-  --color-bg-300: rgb(212 212 216);
-  --color-bg-400: rgb(161 161 170);
-  --color-bg-500: rgb(113 113 122);
-  --color-bg-600: rgb(82 82 91);
-  --color-bg-700: rgb(63 63 70);
-  --color-bg-800: rgb(39 39 42);
-  --color-bg-900: rgb(24 24 27);
-  --color-bg-950: rgb(9 9 11);
-}
-
-.bg-neutral {
-  --color-bg-50: rgb(250 250 250);
-  --color-bg-100: rgb(245 245 245);
-  --color-bg-200: rgb(229 229 229);
-  --color-bg-300: rgb(212 212 212);
-  --color-bg-400: rgb(163 163 163);
-  --color-bg-500: rgb(115 115 115);
-  --color-bg-600: rgb(82 82 82);
-  --color-bg-700: rgb(64 64 64);
-  --color-bg-800: rgb(38 38 38);
-  --color-bg-900: rgb(23 23 23);
-  --color-bg-950: rgb(10 10 10);
-}
-
-.bg-stone {
-  --color-bg-50: rgb(250 250 249);
-  --color-bg-100: rgb(245 245 244);
-  --color-bg-200: rgb(231 229 228);
-  --color-bg-300: rgb(214 211 209);
-  --color-bg-400: rgb(168 162 158);
-  --color-bg-500: rgb(120 113 108);
-  --color-bg-600: rgb(87 83 78);
-  --color-bg-700: rgb(68 64 60);
-  --color-bg-800: rgb(41 37 36);
-  --color-bg-900: rgb(28 25 23);
-  --color-bg-950: rgb(12 10 9);
-}
-
-.bg-custom {
-  --color-bg-50: rgb(0 0 0);
-  --color-bg-100: rgb(0 0 0);
-  --color-bg-200: rgb(0 0 0);
-  --color-bg-300: rgb(0 0 0);
-  --color-bg-400: rgb(0 0 0);
-  --color-bg-500: rgb(0 0 0);
-  --color-bg-600: rgb(0 0 0);
-  --color-bg-700: rgb(0 0 0);
-  --color-bg-800: rgb(0 0 0);
-  --color-bg-900: rgb(0 0 0);
-  --color-bg-950: rgb(0 0 0);
-}
-
-::global {
-  --toastify-color-light: var(--color-custom-500);
-}
-
-.Toastify__progress-bar--default {
-  background: var(--color-custom-500);
-  opacity: 1 !important;
-}
-
-.Toastify__toast-container {
-  @apply w-full sm:w-min sm:min-w-96;
-}
-
-.Toastify__toast-container * {
-  font-family: inherit !important;
-}
-
-.Toastify__toast {
-  @apply bg-bg-50 text-bg-800 dark:bg-bg-800 dark:text-bg-50;
-}
-
-input:autofill {
-  background: transparent; /* or any other */
-}
-
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: black;
-  transition: background-color 5000s ease-in-out 0s;
-  @apply caret-bg-800;
-}
-
-.dark input:-webkit-autofill,
-.dark input:-webkit-autofill:hover,
-.dark input:-webkit-autofill:focus,
-.dark input:-webkit-autofill:active {
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: #ffffff;
-  transition: background-color 5000s ease-in-out 0s;
-  caret-color: #ffffff;
-}
-
-#qr-scanner svg {
-  @apply hidden;
-}
-
-.range {
-  --range-bg: none;
-}
-
-.range-primary {
-  @apply text-custom-500;
-  --range-thumb: var(--color-bg-100);
-}
-
-.dark .range-primary {
-  --range-thumb: var(--color-bg-800);
-}
-
-.bg-neutral {
-  background-color: var(--color-bg-500);
-}
-
-.tabler-icon {
-  @apply size-6 shrink-0;
-}
-
-* {
-  --tw-prose-bold: var(--color-bg-800);
-  --tw-prose-bullets: var(--color-bg-800);
-  --tw-prose-counters: var(--color-bg-800);
-}
-
-.dark * {
-  --tw-prose-bold: var(--color-bg-100);
-  --tw-prose-bullets: var(--color-bg-100);
-  --tw-prose-counters: var(--color-bg-100);
-}
-
-.prose * {
-  @apply my-0 leading-normal text-bg-800 dark:text-bg-100;
-}
-
-.prose :is(h1, h2, h3, h4, h5, h6) {
-  @apply text-lg font-semibold text-bg-900 dark:text-bg-50;
-}
-
-.prose hr {
-  @apply my-4! border-bg-300 dark:border-bg-700;
-}
-
-.prose li {
-  padding-inline-start: 0 !important;
-  @apply m-0! p-0!;
-  vertical-align: top;
-  @apply relative flex flex-col items-start before:absolute before:top-[0.6rem] before:left-[-1rem] before:h-[5px] before:w-[5px] before:rounded-full before:bg-[var(--tw-prose-bullets)];
-}
-
-.prose ul {
-  padding-inline-start: 0 !important;
-  @apply mx-5 list-disc;
-  line-height: 0.5;
-}
-
-.prose ol {
-  padding-inline-start: 0 !important;
-  @apply mx-5 list-decimal;
-}
-
-.prose blockquote {
-  @apply my-4 rounded-sm border-l-4 border-bg-300 bg-bg-200 px-4 dark:border-bg-700 dark:bg-bg-900/50;
-}
-
-.prose pre {
-  @apply my-4 rounded-sm bg-bg-100 shadow-custom dark:bg-bg-900/50;
-}
-
-.prose code:not(pre > code) {
-  @apply rounded-sm border-0 bg-bg-200 px-2 py-0.5 text-bg-800 shadow-sm dark:bg-bg-900/50 dark:text-bg-50;
-}
-
-.input-icon {
-  @apply !bg-black;
-}
-
-aside .sidebar-item .bg-bg-200\/50 svg {
+aside .sidebar-item svg {
   @apply text-custom-500!;
 }
