--- a/src/components/inputs/DateInput/index.css
+++ b/src/components/inputs/DateInput/index.css
@@ -12,7 +12,7 @@
 }
 
 .react-datepicker {
-  @apply border-bg-200 bg-bg-50 shadow-custom dark:border-bg-700 dark:bg-bg-800 text-sm! overflow-hidden rounded-lg font-medium;
+  @apply border-bg-200 bg-bg-50 shadow-custom dark:border-bg-700 dark:bg-bg-800 text-sm! overflow-hidden rounded-lg p-4 font-medium;
 }
 
 .react-datepicker__day {
