--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,6 @@
 @import '../components/inputs/DateInput/index.css';
 @import '../components/inputs/ColorInput/ColorPickerModal/index.css';
+@import './componentBG.css';
 
 ::global {
   --toastify-color-light: var(--color-custom-500);
